force-app/main/default/objects/TerritoryAllocatorItem__c/TerritoryAllocatorItem__c.object-meta.xml
<CustomObject>
    <label>Territory Allocator Item</label>
    <nameField>
        <displayFormat>TA_ITEM-{0000}</displayFormat>
        <label>TerrtoryAllocatorItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TerritoryAllocatorItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>