force-app/main/default/objects/TerritoryAllocatorItem__c/fields/Allocator__c.field-meta.xml
<CustomField>
    <fullName>Allocator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Allocator</label>
    <referenceTo>TerritoryAllocator__c</referenceTo>
    <relationshipLabel>TerritoryAllocatorItems</relationshipLabel>
    <relationshipName>TerrtoryAllocatorItems</relationshipName>
    <type>Lookup</type>
</CustomField>