force-app/main/default/objects/TerritoryAllocatorItem__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External_Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>