force-app/main/default/objects/TerritoryAllocatorItem__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <description>Account field</description>
    <label>Field</label>
    <length>50</length>
    <type>Text</type>
</CustomField>