force-app/main/default/objects/TerritoryAllocatorItem__c/fields/Item_Value__c.field-meta.xml
<CustomField>
    <fullName>Item_Value__c</fullName>
    <label>Item Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>