force-app/main/default/objects/TerritoryAllocatorItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Allocator__c</columns>
    <columns>Field__c</columns>
    <columns>Item_Value__c</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>